# adventofcode

./: .gitignore  README.md
2023/ada/day02a/: day02a.adb
2023/ada/day02b/: day02b.adb
2023/ada/day03a/: day03a.adb
2023/ada/day03b/: day03b.adb
2023/ada/day04a/: day04a.adb
2023/ada/day04b/: day04b.adb
2023/c/day01a/: Makefile  day01a.c
2023/c/day01b/: Makefile  day01b.c
2023/c/day02a/: Makefile  day02a.c
2023/c/day02b/: Makefile  day02b.c
2023/c/day03a/: Makefile  day03a.c
2023/c/day03b/: Makefile  day03b.c
2023/c/day04a/: Makefile  day04a.c
2023/c/day04b/: Makefile  day04b.c
2023/clojure/day01a/: CHANGELOG.md  README.md  project.clj
2023/clojure/day01b/: CHANGELOG.md  README.md
2023/clojure/day04a/: project.clj
2023/clojure/day04b/: project.clj
2023/cpp/day02a/: Makefile  day02a.cpp
2023/cpp/day02b/: Makefile  day02b.cpp
c++/templates/: Makefile  template.cpp
c++/utils/: md5.cpp  md5.h  position.h
c/utils/: md5.h
d/aoc_utils/: geometry.d
go/templates/: template.go
haskell/2015/day03a/: day03a.cabal
haskell/2015/day03a/src/: Main.hs
haskell/2016/: .gitconfig
haskell/2025/day12a/: day12a.cabal
haskell/2025/day12a/src/: Main.hs
haskell/template/: Main.hs  Makefile
java/templates/: Program.java
java/utils/: Makefile
modula2/utils/: Args.def  Args.mod  CardinalExtras.def  CardinalExtras.mod  DynamicStringFIO.def  DynamicStringFIO.mod  DynamicStringIO.def  DynamicStringIO.mod  Geometry.def  Geometry.mod  MD5.def  MD5.mod  StrExtras.def  StrExtras.mod  StringSet.def  StringSet.mod
rust/templates/: template.rs
(+1887 files in other folders)
