cabal-version:      3.0
name:               day03a
version:            0.1.0.0
-- synopsis:
-- description:
license:            CC-BY-SA-4.0
license-file:       LICENSE
author:             REDACTED
maintainer:         root@localhost
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day03a
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, clock, deepseq, containers >= 0.8, aoc-utils
    hs-source-dirs:   src
    default-language: Haskell2010
