cabal-version:      3.14
name:               day12a
version:            0.1.0.0
license:            NONE
author:             XXX
maintainer:         XXX
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable day12a
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -O2 -threaded
    build-depends:    base ^>=4.21.0.0, clock, deepseq, containers, parsec
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: BangPatterns

